--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: white;
 }
 
 .player-controls .song-duration{
