--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 .player-container{
     width: 100%;
     min-width: 350px;
-    padding: 15px;
+    padding: 15px 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,6 +28,8 @@ body{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
 
 .nav-player i {
@@ -39,9 +41,50 @@ body{
     background: #495D69;
     line-height: 36px;
     text-align: center;
-    box-shadow: 2px 7px 8px rgba(0,0,0,.4);
+    box-shadow: 1px 7px 8px rgba(0,0,0,.4);
     cursor: pointer;
 }
+
+.nav-player i:hover{
+    background: #E06F26;
+}
+.menu-controls{
+    display: flex;
+    align-items: center;
+}
+.menu-controls i {
+    margin-right: 6px;
+}
+
+.menu-controls i.fa-volume-up.volumeUpOpen{
+    background: #E06F26;
+}
+
+.volume-menu {
+    width: 187px;
+    background: #495D69;
+    padding: 5px;
+    border-radius: 10px;
+    color: white;
+    margin-left: 5px;
+    box-shadow: 1px 7px 6px rgba(0,0,0,.7);
+    display: none;
+}
+
+.volume-menu span {
+    width: 38px;
+}
+
+.volume-menu.openVolumeMenu{
+    display: block;
+}
+
+
+
+.volume-menu span{
+    margin: 0 3px; 
+}
+
 
 .album-content{
     margin: 30px 0;
