--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,35 @@ body{
 .song-navigation i.fa-play.pauseIcon::before{
     content: '\f04c'
 }
+
+@media screen and (max-width: 360px){
+    .player-container{
+        width: 100%;
+        min-width: 310px;
+        padding: 15px 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        background: #4E6570;
+        position: relative;
+    }
+
+    .volume-menu {
+        position: relative;
+        z-index: 1;
+        width: 183px;
+        background: #495D69;
+        padding: 5px;
+        border-radius: 10px;
+        color: white;
+        margin-left: 1px;
+        box-shadow: 1px 7px 6px rgba(0,0,0,.7);
+        display: none;
+    }
+
+    .volume-menu span{
+        margin: 0 1px; 
+    }
+}
