--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     height: 100vh;
-    background: #15262F;
+    background: #010A0E;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,9 +21,9 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    background: #4E6570;
+    background: #051820;
     position: relative;
-    box-shadow: 3px 5px 2px rgba(0,0,0,.4)
+    box-shadow: 3px 3px 3px rgba(255, 255, 255,0.1);
 }
 
 .nav-player{
@@ -40,10 +40,10 @@ body{
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: #495D69;
+    background: #030D13;
     line-height: 36px;
     text-align: center;
-    box-shadow: 1px 7px 8px rgba(0,0,0,.4);
+    box-shadow: 0px 3px 3px rgba(255, 255, 255,0.1);
     cursor: pointer;
 }
 
@@ -56,17 +56,17 @@ body{
 }
 
 .menu-controls i.fa-volume-up.volumeUpOpen{
-    background: #E06F26;
+    background: #430000;
 }
 
 .volume-menu {
     width: 190px;
-    background: #495D69;
+    background: #030D13;
     padding: 5px;
     border-radius: 10px;
     color: white;
     margin-left: 5px;
-    box-shadow: 1px 7px 6px rgba(0,0,0,.7);
+    box-shadow: 0px 3px 3px rgba(255, 255, 255,0.1);
     display: none;
 }
 
@@ -129,7 +129,7 @@ body{
     height: 100%;
     border-radius: 10px;
     padding: 15px 10px;
-    background: #4E6570;
+    background: #051820;
     text-align: right;
     display: none;
     overflow: auto;
@@ -145,10 +145,10 @@ body{
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: #495D69;
+    background: #030D13;
     line-height: 36px;
     text-align: center;
-    box-shadow: 1px 7px 8px rgba(0,0,0,.4);
+    box-shadow: 0px 3px 3px rgba(255, 255, 255,0.1);
     cursor: pointer;
 }
 
@@ -164,13 +164,13 @@ body{
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    border-bottom: 1px solid rgba(0,0,0,.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.541);
     margin: 10px auto 0 auto;
     border-radius: 5px;
 }
 
 .sidebar-music .music-box.activeBox{
-    background: rgba(0,0,0,.5)
+    background: rgba(0,0,0,.5);
 }
 
 .sidebar-music .music-box .artist-content{
@@ -200,7 +200,7 @@ body{
 }
 
 .sidebar-music .music-box i {
-    background: #E06F26;
+    background: #430000;
     font-size: 15px;
 }
 
@@ -285,16 +285,16 @@ body{
     width: 46px;
     height: 46px;
     border-radius: 50%;
-    background: #495D69;
+    background: #030F14;
     line-height: 46px;
     text-align: center;
-    box-shadow: 2px 7px 8px rgba(0,0,0,.4);
+    box-shadow: 0px 3px 3px rgba(255, 255, 255,0.1);
     cursor: pointer;
     margin: 0 5px;
 }
 
 .song-navigation i.fa-play{
-    background: #E06F26;
+    background: #430000;
     transition: content 1s ease;
 }
 
